--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "mongoose": "^8.0.1",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
