--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "npm run build && serve -s build",
+    "firebase-serve": "npm run build && firebase serve",
+    "deploy-firebase": "npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": [
