--- a/costumer-widget/package.json
+++ b/costumer-widget/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:4000",
   "name": "costumer-widget",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
