--- a/costumer-widget/package.json
+++ b/costumer-widget/package.json
@@ -18,7 +18,10 @@
     "start": "PORT=3002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "npm run build && serve -s build",
+    "firebase-serve": "npm run build && firebase serve",
+    "deploy-firebase": "npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": [
