--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1509.0",
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^8.0.0",
+    "mongoose": "^8.0.2",
+    "openai": "^4.20.1",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   }
